--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 authors = ["evgeniy.scherbina <evgeniy.scherbina@bitfury.com>"]
 
 [dependencies]
-serde = "1.0.80"
-serde_derive = "1.0.80"
-serde_json = "1.0.33"
-bitcoin = "0.20.0"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
+bitcoin = { version = "0.20", features = [ "use-serde" ] }
 hex = "0.3.2"
 sha2 = "0.8.0"
 clap = "2.32.0"
